# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../runtime_config.gni")

include_Sanitzer = [
  "Sanitizer",
]
if (ASAN_SUPPORT_FLAG == 1) {
  source_Sanitizer = [
    "AddressSanitizer/AsanInterface.cpp",
  ]
  include_Sanitzer += [
    "AddressSanitizer",
  ]
} else if (HWASAN_SUPPORT_FLAG == 1) {
  source_Sanitizer = [
    "HwAddressSanitizer/HwasanInterface.cpp",
  ]
  include_Sanitzer += [
    "HwAddressSanitizer",
  ]
} else if (GWPASAN_SUPPORT_FLAG == 1) {
  source_Sanitizer = [
    "GwpAddressSanitizer/GwpAsanInterface.cpp",
  ]
  include_Sanitzer += [
    "GwpAddressSanitizer",
  ]
} else {
  source_Sanitizer = []
}

ohos_static_library("libSanitizer") {
  cflags_c += ["-DBUILD_LIB_CANGJIE_DEMANGLE"]
  cflags_cc += ["-DBUILD_LIB_CANGJIE_DEMANGLE"]
  sources = source_Sanitizer
  include_dirs += include_Sanitzer

  external_deps = [
    "bounds_checking_function:libsec_static"
  ]

  subsystem_name = "thirdparty"
  part_name = "cangjie_runtime"
}

