# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")

ohos_shared_library("cangjie-dynamicLoader-opensslFFI") {
  external_deps = [
    "bounds_checking_function:libsec_shared",
    "openssl:openssl_public_headers",
  ]

  sources = [ "opensslSymbols.c" ]

  output_extension = "so"
  relative_install_dir = "platformsdk/cjsdk"
  subsystem_name = "thirdparty"
  part_name = "cangjie_runtime"
}
